<resources>
    <string name="app_name">Triple</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_mytrips">My Trips</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Logout</string>
    <string name="title_help">Help</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_open_source">Open Source Licenses</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forget">Forget Password?</string>
    <string name="login_signup_guide">Don\'t have an account?&#160;&#160;</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_signin">Sign in</string>
    <string name="login_success">Welcome</string>
    <string name="login_error_data">The username or password is not correct!</string>
    <string name="login_error_process">Something went wrong! (Error code: 1000)</string>
    <string name="forget_password_title">Reset password</string>
    <string name="forget_password_username">Username</string>
    <string name="forget_password_email">Email address</string>
    <string name="forget_password_reset">Reset</string>
    <string name="forget_password_guide">Forget your password? Enter your username and Email address to reset passowrd.</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_profile_button">Save</string>
    <string name="edit_profile_guide">Change your personal information</string>
    <string name="basic_info_title">Basic Info</string>
    <string name="user_details_title">User Details</string>
    <string name="prediction_title">Prediction</string>
    <string name="register_title">Create an account</string>
    <string name="register_demographic_hint">Enter your personal information.</string>
    <string name="register_auth_hint">Enter your basic information.</string>
    <string name="register_username">Username</string>
    <string name="register_fname">First Name</string>
    <string name="register_lname">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_cpassword">Confirm Password</string>
    <string name="register_age">Age Group</string>
    <string name="register_gender">Gender</string>
    <string name="register_country">Country/Region</string>
    <string name="register_age_guide">Select your age group</string>
    <string name="register_gender_guide">Select your gender</string>
    <string name="register_country_guide">Where are you from?</string>
    <string name="register_error_required">Required!</string>
    <string name="register_error_username">Username require at least 6 characters!</string>
    <string name="register_error_username2">Username have been used!</string>
    <string name="register_error_password">Password require at least 6 characters!</string>
    <string name="register_error_password2">Password not match!</string>
    <string name="register_error_email">Enter valid email!</string>
    <string name="register_error_email2">Email have been used!</string>
    <string name="register_error_age">Select your age group!</string>
    <string name="register_error_gender">Select your gender!</string>
    <string name="register_error_country">Select your income group!</string>
    <string name="register_error_create">Something went wrong! (Error code: 1003)</string>
    <string name="register_success_create">Click the link in the verify email to activate your account.</string>
    <string name="empty_trip_list">You don\'t have any trip yet.</string>
    <string-array name="age">
        <item>13-17</item>
        <item>18-24</item>
        <item>25-34</item>
        <item>35-49</item>
        <item>50-64</item>
        <item>65+</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="home_welcome">Welcome back\n%1$s!</string>
    <string name="home_trip">Your Trips</string>
    <string name="home_city">City Guides</string>
    <string name="mytrips_ongoing">Ongoing</string>
    <string name="mytrips_ended">Ended</string>
    <string name="mytrips_offline">Offline Version</string>
    <string name="mytrips_error">Something went wrong! (Error code: 1002)</string>
    <string name="mytrips_create_title">Generate a trip</string>
    <string name="mytrips_create_advise">Remark: The trip dates cannot be changed after creating the trip. Please select the trip dates carefully.</string>
    <string name="mytrips_create_button">Generate</string>
    <string name="mytrips_create_button_cap">GENERATE</string>
    <string name="mytrips_create_tripname">Trip name</string>
    <string name="mytrips_create_tripdestination">Destination</string>
    <string name="mytrips_create_tripdates">Trip dates</string>
    <string name="mytrips_create_checkbox">Add attraction for me</string>
    <string name="mytrips_create_success">Trip created</string>
    <string name="mytrips_create_error_date">End date need to greater than Start date!</string>
    <string name="mytrips_create_error_date_duration">End date need to greater than Start date!</string>
    <string name="mytrips_create_error_process">Something went wrong! (Error code: 1001)</string>
    <string name="mytrips_detail_edit">Edit trip</string>
    <string name="mytrips_detail_delete">Delete trip</string>
    <string name="mytrips_detail_info">Info</string>
    <string name="mytrips_detail_itinerary">Itinerary</string>
    <string name="mytrips_detail_invite">Invite</string>
    <string name="mytrips_detail_save">Save</string>
    <string name="mytrips_detail_daysleft_after">Your trip is started!</string>
    <string name="mytrips_detail_daysleft_before">Days Left</string>
    <string name="mytrips_detail_tripsaved">Your trip is saved offline.</string>
    <string name="mytrips_detail_delete_title">Delete Trip</string>
    <string name="mytrips_detail_delete_content">Are you sure to delete your trip?</string>
    <string name="mytrips_detail_delete_yes">Confirm</string>
    <string name="mytrips_detail_delete_no">Cancel</string>
    <string name="mytrips_detail_now">Now</string>
    <string name="mytrips_detail_next">Comming Up</string>
    <string name="mytrips_detail_itinerary_dayname_pre">Day</string>
    <string name="mytrips_detail_itinerary_dayname_post"></string>
    <string name="mytrips_detail_itinerary_hour">h</string>
    <string name="mytrips_detail_itinerary_minutes">min</string>
    <string name="mytrips_detail_itinerary_meters">m</string>
    <string name="mytrips_detail_itinerary_kilometers">km</string>
    <string name="mytrips_detail_itinerary_departure">Departure time:</string>
    <string name="mytrips_detail_itinerary_return">Return time:</string>
    <string name="mytrips_article_days">Days</string>
    <string name="mytrips_article_highlight">Trip Highlight</string>
    <string name="profile_preference">Your Travel Style</string>
    <string name="profile_preference_edit">Edit travel style</string>
    <string name="city_detail_discover">Discover</string>
    <string name="city_detail_favorites">Favorites</string>
    <string name="city_detail_plan">Trip Plan</string>
    <string name="city_detail_topattraction">Attractions</string>
    <string name="attraction_detail_seeall">See All</string>
    <string name="attraction_detail_share">Share</string>
    <string name="attraction_detail_bookmark">Add to trip</string>
    <string name="attraction_detail_info">Essential Information</string>
    <string name="attraction_detail_review">Reviews</string>
    <string name="attraction_detail_bookmark_success">Added to Favorites</string>
    <string name="attraction_detail_bookmark_fail">Encounter error, try again</string>
    <string name="profile_account">Account</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_share">Share Triple</string>
    <string name="profile_travle_style">Travel Style</string>
    <string name="profile_edit_style">Edit</string>
    <string name="help_developer">Developer</string>
    <string name="help_copyright">Copyright</string>
    <string name="help_open_source">Open source licenses</string>
    <string name="nav_bar_login">Click here to login</string>
    <string-array name="destination">
        <item>asssss</item>
        <item>assssss</item>
        <item>assssssss</item>
        <item>assssssssss</item>
    </string-array>
    <string name="api_prefix">http://tripleapi-env.ap-southeast-1.elasticbeanstalk.com</string>
    <string name="api_system_protery">/system/property</string>
    <string name="api_login">/member/authentication</string>
    <string name="api_registration">/member/register</string>
    <string name="api_trip_create">/trip</string>
    <string name="api_trip_get">/trip</string>
    <string name="api_trip_get_detail">/trip/</string>
    <string name="api_profile_preference">/member/preference</string>
    <string name="api_forget_password">/forgetpassword</string>
    <string name="api_attraction">/attraction</string>
    <string name="local_api_prefix">http://com.triple</string>
    <string name="google_maps_key">AIzaSyAhUiOpN5cILuciEpCWvCWNss60owhV_vs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="snackbar_ok">OK</string>
    <string name="snackbar_refersh">Refersh</string>
    <string name="dialog_generating_title">Generating Itinerary</string>
    <string name="dialog_progress_title">Processing...</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="intent_share_header">Share this by</string>
    <string name="intent_share_message_attraction">
        %1$s\nCheck it out in Triple!\nTriple - An A.I. Driven Travel Planner\n%2$s
    </string>
    <string name="action_settings">Settings</string>
    <string name="tag_52e81612bcbc57f1066b79e7">Circus</string>
    <string name="tag_52e81612bcbc57f1066b79ea">Go Kart Track</string>
    <string name="tag_52e81612bcbc57f1066b79e6">Laser Tag</string>
    <string name="tag_52e81612bcbc57f1066b79eb">Mini Golf</string>
    <string name="tag_4bf58dd8d48988d191941735">Science Museum</string>
    <string name="tag_4bf58dd8d48988d193941735">Water Park</string>
    <string name="tag_4bf58dd8d48988d11f941735">Nightclub</string>
    <string name="tag_4bf58dd8d48988d15a941735">Garden</string>
    <string name="tag_4deefb944765f83613cdba6e">Historic Site</string>
    <string name="tag_4bf58dd8d48988d190941735">History Museum</string>
    <string name="tag_4bf58dd8d48988d11b941735">Pub</string>
    <string name="tag_4bf58dd8d48988d11e941735">Cocktail Bar</string>
    <string name="tag_53e510b7498ebcb1801b55d4">Night Market</string>
    <string name="tag_4bf58dd8d48988d11a941735">Other Nightlife</string>
    <string name="tag_52e81612bcbc57f1066b7a22">Botanical Garden</string>
    <string name="tag_4bf58dd8d48988d15b941735">Farm</string>
    <string name="tag_4bf58dd8d48988d102951735">Accessories Store</string>
    <string name="tag_4bf58dd8d48988d104951735">Boutique</string>
    <string name="tag_4bf58dd8d48988d106951735">Men\'s Store</string>
    <string name="tag_4bf58dd8d48988d108951735">Women\'s Store</string>
    <string name="tag_4bf58dd8d48988d10c951735">Cosmetics Shop</string>
    <string name="tag_52e81612bcbc57f1066b7a21">National Park</string>
    <string name="tag_52e81612bcbc57f1066b7a13">Nature Preserve</string>
    <string name="tag_4bf58dd8d48988d162941735">Other Great Outdoors</string>
    <string name="tag_4bf58dd8d48988d165941735">Scenic Lookout</string>
    <string name="tag_56aa371be4b08b9a8d573560">Waterfall</string>
</resources>