<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Presenter.Mytrips.TripCreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mytrips_create_advise"
            android:layout_marginBottom="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_tripname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mytrips_create_tripname"
                android:inputType="text"
                android:lines="1">

                <requestFocus />
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_tripdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/mytrips_create_tripdates"
                android:inputType="number"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/actw_detination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mytrips_create_tripdestination"
                android:inputType="text"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mytrips_create_checkbox" />

        <Button
            android:id="@+id/bt_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:background="@color/colorPrimary"
            android:onClick="onButtonCreateClicked"
            android:text="@string/mytrips_create_button"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
