<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.triple.triple.Presenter.Account.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/register_advise"
            android:textSize="18dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username"
                android:inputType="text"
                android:lines="1"></EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email"
                android:inputType="text"
                android:lines="1"></EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="text"
                android:lines="1"></EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_cpassword"
                android:inputType="text"
                android:lines="1"></EditText>
        </android.support.design.widget.TextInputLayout>

        <org.angmarch.views.NiceSpinner
            android:id="@+id/sp_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_age"
            android:textSize="18dp" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/sp_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_gender"
            android:textSize="18dp" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/sp_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_income"
            android:textSize="18dp" />

    </LinearLayout>

</LinearLayout>
