<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".Presenter.Mytrips.TripCreateActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_tripname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mytrips_create_tripname"
                    android:inputType="text"
                    android:lines="1">

                    <requestFocus />
                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_tripdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/mytrips_create_tripdates"
                    android:lines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_detination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/mytrips_create_tripdestination"
                    android:lines="1" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mytrips_create_checkbox"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mytrips_create_advise"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/bt_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:onClick="onButtonCreateClicked"
                android:text="@string/mytrips_create_button"
                android:theme="@style/MyButton"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>