<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/input_field_padding"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_user_profile_100px" />

        <TextView
            android:id="@+id/lblTitle"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/icon"
            android:textStyle="bold"
            android:text="@string/basic_info_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/register_auth_hint"
            android:textAlignment="center" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_field_username"
            android:layout_below="@id/lblHint"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username"
                android:inputType="text"
                android:lines="1"
                android:maxLength="20" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_below="@+id/input_field_username"
            android:layout_centerHorizontal="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_field_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_below="@+id/input_field_password"
            android:layout_centerHorizontal="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_cpassword"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_below="@+id/input_field_password_confirmation"
            android:layout_centerHorizontal="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email"
                android:inputType="text"
                android:lines="1"
                android:maxLength="255" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>